# supply-chain-resilience

./: .gitignore  CLAUDE.md  DESIGN.md  LICENSE  Makefile  README.md  SPEC.md  implementation-notes.md  pyproject.toml
data/: events.json  network.json
docs/: 00-executive-walkthrough.md  01-architecture.md  02-risk-typology.md  03-kpi-reference.md  04-scenario-guide.md  05-llm-integration.md  06-roadmap.md  exec-brief.html  index.md  make_exec_brief.py
src/resilience_radar/: __init__.py  __main__.py  cli.py  dashboard.py  graph.py  kpi.py  llm.py  mitigate.py  models.py  radar.py  scoring.py  simulate.py  typology.py
src/resilience_radar.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: __init__.py  _bootstrap.py  fixtures.py  test_dashboard.py  test_graph.py  test_kpi.py  test_mitigate.py  test_scoring.py  test_simulate.py  test_typology.py
