[project]
name = "resilience-radar"
version = "0.1.0"
description = "A supply chain resilience control tower: disruption-event feed -> classified risk register -> time-phased what-if simulation -> ranked mitigations -> single-file HTML dashboard."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Lavi Sahu" }]
keywords = ["supply-chain", "resilience", "risk", "simulation", "dashboard"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/LaviSahu/supply-chain-resilience"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
